--- a/app/components/Home.css
+++ b/app/components/Home.css
@@ -1,23 +1,16 @@
-/* .container { */
+/*
+.container {
+  position: absolute;
+  top: 30%;
+  left: 10px;
+  text-align: center;
+}
 
-/*  position: absolute; */
+.container h2 {
+  font-size: 5rem;
+}
 
-/*  top: 30%; */
-
-/*  left: 10px; */
-
-/*  text-align: center; */
-
-/* } */
-
-/* .container h2 { */
-
-/*  font-size: 5rem; */
-
-/* } */
-
-/* .container a { */
-
-/*  font-size: 1.4rem; */
-
-/* } */
+.container a {
+  font-size: 1.4rem;
+}
+*/
