--- a/app/app.global.css
+++ b/app/app.global.css
@@ -8,7 +8,7 @@ body {
   position: relative;
   height: 100vh;
   font-family: Arial, Helvetica, Helvetica Neue, serif;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 a:hover {
